Commad and CommandFactory approach to clean up MainWindow file

--- a/OuhmaniaPeopleRecognizer/MainWindow.resx
+++ b/OuhmaniaPeopleRecognizer/MainWindow.resx
@@ -126,19 +126,19 @@
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="rotateRightToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 24</value>
+    <value>155, 22</value>
   </data>
   <data name="rotateRightToolStripMenuItem.Text" xml:space="preserve">
     <value>Obróć w prawo</value>
   </data>
   <data name="rotateLeftToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 24</value>
+    <value>155, 22</value>
   </data>
   <data name="rotateLeftToolStripMenuItem.Text" xml:space="preserve">
     <value>Obróć w lewo</value>
   </data>
   <data name="pictureMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>181, 52</value>
+    <value>156, 48</value>
   </data>
   <data name="&gt;&gt;pictureMenuStrip.Name" xml:space="preserve">
     <value>pictureMenuStrip</value>
@@ -147,13 +147,10 @@
     <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="pictureBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 4</value>
-  </data>
-  <data name="pictureBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>12, 3</value>
   </data>
   <data name="pictureBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>907, 731</value>
+    <value>679, 592</value>
   </data>
   <data name="pictureBox1.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>Zoom</value>
@@ -181,19 +178,19 @@
     <value>248, 3</value>
   </metadata>
   <data name="addPersonToolStripContextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>215, 24</value>
+    <value>184, 22</value>
   </data>
   <data name="addPersonToolStripContextMenuItem.Text" xml:space="preserve">
     <value>Dodaj osobę</value>
   </data>
   <data name="deletePersonToolStripContextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>215, 24</value>
+    <value>184, 22</value>
   </data>
   <data name="deletePersonToolStripContextMenuItem.Text" xml:space="preserve">
     <value>Usuń wybraną osobę</value>
   </data>
   <data name="peopleListMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>216, 52</value>
+    <value>185, 48</value>
   </data>
   <data name="&gt;&gt;peopleListMenuStrip.Name" xml:space="preserve">
     <value>peopleListMenuStrip</value>
@@ -208,16 +205,16 @@
     <value>True</value>
   </data>
   <data name="peopleCheckBoxList.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 4</value>
+    <value>3, 3</value>
   </data>
   <data name="peopleCheckBoxList.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 27, 4</value>
+    <value>3, 3, 20, 3</value>
   </data>
   <data name="peopleCheckBoxList.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>133, 54</value>
+    <value>100, 44</value>
   </data>
   <data name="peopleCheckBoxList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>336, 277</value>
+    <value>252, 191</value>
   </data>
   <data name="peopleCheckBoxList.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -238,16 +235,13 @@
     <value>Top, Bottom, Left, Right</value>
   </data>
   <data name="treeView1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 4</value>
-  </data>
-  <data name="treeView1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>3, 3</value>
   </data>
   <data name="treeView1.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>133, 54</value>
+    <value>100, 44</value>
   </data>
   <data name="treeView1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>333, 418</value>
+    <value>250, 338</value>
   </data>
   <data name="treeView1.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -268,76 +262,76 @@
     <value>17, 17</value>
   </metadata>
   <data name="nowyProjektToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>168, 22</value>
   </data>
   <data name="nowyProjektToolStripMenuItem.Text" xml:space="preserve">
     <value>Nowy projekt</value>
   </data>
   <data name="loadProjectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>168, 22</value>
   </data>
   <data name="loadProjectToolStripMenuItem.Text" xml:space="preserve">
     <value>Wczytaj projekt</value>
   </data>
   <data name="saveProjectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>168, 22</value>
   </data>
   <data name="saveProjectToolStripMenuItem.Text" xml:space="preserve">
     <value>Zapisz projekt</value>
   </data>
   <data name="exportFilesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>168, 22</value>
   </data>
   <data name="exportFilesToolStripMenuItem.Text" xml:space="preserve">
     <value>Stwórz fotoksiążki</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>221, 6</value>
+    <value>165, 6</value>
   </data>
   <data name="closeProgramToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>168, 22</value>
   </data>
   <data name="closeProgramToolStripMenuItem.Text" xml:space="preserve">
     <value>Zamknij program</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>46, 24</value>
+    <value>38, 20</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
     <value>Plik</value>
   </data>
   <data name="loadPhotosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>158, 22</value>
   </data>
   <data name="loadPhotosToolStripMenuItem.Text" xml:space="preserve">
     <value>Dodaj zdjęcia</value>
   </data>
   <data name="rescanDirectoryToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>158, 22</value>
   </data>
   <data name="rescanDirectoryToolStripMenuItem.Text" xml:space="preserve">
     <value>Odśwież foldery</value>
   </data>
   <data name="photosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>72, 24</value>
+    <value>57, 20</value>
   </data>
   <data name="photosToolStripMenuItem.Text" xml:space="preserve">
     <value>Zdjęcia</value>
   </data>
   <data name="addPersonToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>140, 22</value>
   </data>
   <data name="addPersonToolStripMenuItem.Text" xml:space="preserve">
     <value>Dodaj osobę</value>
   </data>
   <data name="removePersonToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 26</value>
+    <value>140, 22</value>
   </data>
   <data name="removePersonToolStripMenuItem.Text" xml:space="preserve">
     <value>Usuń osobę</value>
   </data>
   <data name="personToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 24</value>
+    <value>53, 20</value>
   </data>
   <data name="personToolStripMenuItem.Text" xml:space="preserve">
     <value>Osoby</value>
@@ -345,8 +339,11 @@
   <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
+  <data name="menuStrip1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 2, 0, 2</value>
+  </data>
   <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1299, 28</value>
+    <value>974, 24</value>
   </data>
   <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -370,10 +367,10 @@
     <value>Fill</value>
   </data>
   <data name="splitContainer1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 28</value>
+    <value>0, 24</value>
   </data>
   <data name="splitContainer1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>7, 6, 7, 6</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="&gt;&gt;splitContainer1.Panel1.Name" xml:space="preserve">
     <value>splitContainer1.Panel1</value>
@@ -395,9 +392,6 @@
   </data>
   <data name="splitContainer2.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
-  </data>
-  <data name="splitContainer2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
   </data>
   <data name="splitContainer2.Orientation" type="System.Windows.Forms.Orientation, System.Windows.Forms">
     <value>Horizontal</value>
@@ -427,13 +421,10 @@
     <value>1</value>
   </data>
   <data name="splitContainer2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>354, 765</value>
+    <value>266, 620</value>
   </data>
   <data name="splitContainer2.SplitterDistance" type="System.Int32, mscorlib">
-    <value>306</value>
-  </data>
-  <data name="splitContainer2.SplitterWidth" type="System.Int32, mscorlib">
-    <value>5</value>
+    <value>248</value>
   </data>
   <data name="splitContainer2.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -466,13 +457,10 @@
     <value>100</value>
   </data>
   <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1299, 765</value>
+    <value>974, 620</value>
   </data>
   <data name="splitContainer1.SplitterDistance" type="System.Int32, mscorlib">
-    <value>940</value>
-  </data>
-  <data name="splitContainer1.SplitterWidth" type="System.Int32, mscorlib">
-    <value>5</value>
+    <value>704</value>
   </data>
   <data name="splitContainer1.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -493,37 +481,34 @@
     <value>132, 17</value>
   </metadata>
   <data name="loadedFilesCounttoolStripStatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 20</value>
+    <value>121, 17</value>
   </data>
   <data name="loadedFilesCounttoolStripStatusLabel.Text" xml:space="preserve">
     <value>Wczytanych plików: 0</value>
   </data>
   <data name="allFilesCounttoolStripStatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>130, 20</value>
+    <value>103, 17</value>
   </data>
   <data name="allFilesCounttoolStripStatusLabel.Text" xml:space="preserve">
     <value>Wszystkie pliki: {0}</value>
   </data>
   <data name="folderPathtoolStripStatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 20</value>
+    <value>0, 17</value>
   </data>
   <data name="autosaveToolStripStatusLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
   </data>
   <data name="autosaveToolStripStatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 20</value>
+    <value>121, 17</value>
   </data>
   <data name="autosaveToolStripStatusLabel.Text" xml:space="preserve">
     <value>Autozapis: Włączony</value>
   </data>
   <data name="statusStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 767</value>
-  </data>
-  <data name="statusStrip1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>1, 0, 19, 0</value>
+    <value>0, 622</value>
   </data>
   <data name="statusStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1299, 26</value>
+    <value>974, 22</value>
   </data>
   <data name="statusStrip1.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -550,10 +535,10 @@
     <value>53</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
+    <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1299, 793</value>
+    <value>974, 644</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -630,9 +615,6 @@
         AAcAAAAHAAAABwAAAAcAAAAHAAAABwAAAAcAAAAHAAAABwAAAA+AAAAPgAAAD8AAAAfAAAAD4AAAAfAA
         AAD4AAAA/gAAAP+ADA////4P////D////48=
 </value>
-  </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>OuhmaniaPeopleRecognizer v1.0</value>
