--- a/OuhmaniaPeopleRecognizer/Properties/Resources.en-us.resx
+++ b/OuhmaniaPeopleRecognizer/Properties/Resources.en-us.resx
@@ -1,56 +1,159 @@
+<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
   <resheader name="version">
-    <value>1.3</value>
+    <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="HelloString" xml:space="preserve">
-    <value>Hello Photobook</value>
-  </data>
-  <data name="MainWindow_deletePersonToolStripContextMenuItem_Confirm" xml:space="preserve">
+  <data name="RemoveCategoryDialog_Text" xml:space="preserve">
     <value>Do you want to delete '{0}'?</value>
   </data>
-  <data name="MainWindow_deletePersonToolStripContextMenuItem_ConfirmTitle" xml:space="preserve">
-    <value>Delete person</value>
+  <data name="RemoveCategoryDialog_Title" xml:space="preserve">
+    <value>Delete category</value>
   </data>
-  <data name="MainWindow_addPerson_Title" xml:space="preserve">
-    <value>Add person</value>
+  <data name="AddCategoryDialog_Title" xml:space="preserve">
+    <value>Add category</value>
   </data>
-  <data name="MainWindow_addPerson_Caption" xml:space="preserve">
-    <value>Type in name and lastname</value>
+  <data name="AddCategoryDialog_Text" xml:space="preserve">
+    <value>Type in category name</value>
   </data>
-  <data name="MainWindow_CheckUnsavedChangesDialog_Caption" xml:space="preserve">
+  <data name="UnsavedChangesDialog_Text" xml:space="preserve">
     <value>You have unsaved changes in project! Do you want to save them?</value>
   </data>
-  <data name="MainWindow_CheckUnsavedChangesDialog_Title" xml:space="preserve">
+  <data name="UnsavedChangesDialog_Title" xml:space="preserve">
     <value>Unsaved changes</value>
   </data>
-  <data name="MainWindow_CheckMissingFiles_FoundMissingFiles" xml:space="preserve">
+  <data name="CheckMissingFilesDialog_FoundMissingFiles" xml:space="preserve">
     <value>{0} files was not found. Do you want to remove them from the project? \n {1}</value>
   </data>
-  <data name="MainWindow_CheckMissingFiles_FoundMissingFiles_Title" xml:space="preserve">
+  <data name="CheckMissingFilesDialog_FoundMissingFiles_Title" xml:space="preserve">
     <value>Missing files</value>
   </data>
-  <data name="MainWindow_Autosave_Off" xml:space="preserve">
+  <data name="Autosave_Off" xml:space="preserve">
     <value>Autosave: Off</value>
   </data>
-  <data name="MainWindow_Autosave_On" xml:space="preserve">
+  <data name="Autosave_On" xml:space="preserve">
     <value>Autosave: On</value>
   </data>
-  <data name="MainWindow_Autosave_Status" xml:space="preserve">
+  <data name="Autosave_Status" xml:space="preserve">
     <value>{0}, last: {1}</value>
   </data>
-  <data name="MainWindow_loadedFilesCounttoolStripStatusLabel" xml:space="preserve">
+  <data name="LoadedFilesLabel" xml:space="preserve">
     <value>Loaded files: {0}</value>
   </data>
-  <data name="MainWindow_allFilesCounttoolStripStatusLabel" xml:space="preserve">
+  <data name="AllFiles" xml:space="preserve">
     <value>All files: {0}</value>
   </data>
 </root>
