--- a/OuhmaniaPeopleRecognizer/Properties/Resources.en-us.resx
+++ b/OuhmaniaPeopleRecognizer/Properties/Resources.en-us.resx
@@ -156,4 +156,10 @@
   <data name="AllFiles" xml:space="preserve">
     <value>All files: {0}</value>
   </data>
+  <data name="RotateLeft" xml:space="preserve">
+    <value>Rotate left</value>
+  </data>
+  <data name="RotateRight" xml:space="preserve">
+    <value>Rotate right</value>
+  </data>
 </root>
