--- a/PhotoCategorizer.i18N/Resources.en.resx
+++ b/PhotoCategorizer.i18N/Resources.en.resx
@@ -117,123 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="keepButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>258, 216</value>
+  <data name="RemoveCategoryDialog_Text" xml:space="preserve">
+    <value>Czy chcesz usunąć '{0}'?</value>
   </data>
-  <data name="keepButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+  <data name="RemoveCategoryDialog_Title" xml:space="preserve">
+    <value>Remove category</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="keepButton.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
+  <data name="AddCategoryDialog_Text" xml:space="preserve">
+    <value>Type category name</value>
   </data>
-  <data name="keepButton.Text" xml:space="preserve">
-    <value>Zostaw</value>
+  <data name="AddCategoryDialog_Title" xml:space="preserve">
+    <value>Add new category</value>
   </data>
-  <data name="&gt;&gt;keepButton.Name" xml:space="preserve">
-    <value>keepButton</value>
+  <data name="UnsavedChangesDialog_Text" xml:space="preserve">
+    <value>You have unsaved in your project! Do you want to save them?</value>
   </data>
-  <data name="&gt;&gt;keepButton.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="UnsavedChangesDialog_Title" xml:space="preserve">
+    <value>Unsaved changes</value>
   </data>
-  <data name="&gt;&gt;keepButton.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="CheckMissingFilesDialog_FoundMissingFiles" xml:space="preserve">
+    <value>Nie znaleziono {0} plików. Czy chcesz je usunąć z projektu?</value>
   </data>
-  <data name="&gt;&gt;keepButton.ZOrder" xml:space="preserve">
-    <value>3</value>
+  <data name="CheckMissingFilesDialog_FoundMissingFiles_Title" xml:space="preserve">
+    <value>Brakujące pliki</value>
   </data>
-  <data name="removeButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>177, 216</value>
+  <data name="Autosave_Off" xml:space="preserve">
+    <value>Autozapis: Wyłączony</value>
   </data>
-  <data name="removeButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+  <data name="Autosave_On" xml:space="preserve">
+    <value>Autozapis: Włączony</value>
   </data>
-  <data name="removeButton.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
+  <data name="Autosave_Status" xml:space="preserve">
+    <value>{0}. ostatni: {1}</value>
   </data>
-  <data name="removeButton.Text" xml:space="preserve">
-    <value>Usuń</value>
+  <data name="LoadedFilesLabel" xml:space="preserve">
+    <value>Wczytanych plików: {0}</value>
   </data>
-  <data name="&gt;&gt;removeButton.Name" xml:space="preserve">
-    <value>removeButton</value>
+  <data name="AllFiles" xml:space="preserve">
+    <value>Wszystkie pliki: {0}</value>
   </data>
-  <data name="&gt;&gt;removeButton.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="RotateLeft" xml:space="preserve">
+    <value>Rotate left</value>
   </data>
-  <data name="&gt;&gt;removeButton.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="RotateRight" xml:space="preserve">
+    <value>Rotate right</value>
   </data>
-  <data name="&gt;&gt;removeButton.ZOrder" xml:space="preserve">
-    <value>2</value>
+  <data name="MainWindow_AddNewCategory" xml:space="preserve">
+    <value>Add new category</value>
   </data>
-  <data name="notFoundLabel.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="AddCategoryDialog_AssignCategoryKey" xml:space="preserve">
+    <value>Assign key</value>
   </data>
-  <data name="notFoundLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 9</value>
+  <data name="AddCategoryDialog_AssignedKey" xml:space="preserve">
+    <value>Assigned: {0}</value>
   </data>
-  <data name="notFoundLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>79, 13</value>
+  <data name="AddCategoryDialog_Ok" xml:space="preserve">
+    <value>OK</value>
   </data>
-  <data name="notFoundLabel.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
+  <data name="AddCategoryDialog_WaitingForKey" xml:space="preserve">
+    <value>Waiting for input...</value>
   </data>
-  <data name="notFoundLabel.Text" xml:space="preserve">
-    <value>Zagubione pliki</value>
+  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
+    <value>File</value>
   </data>
-  <data name="&gt;&gt;notFoundLabel.Name" xml:space="preserve">
-    <value>notFoundLabel</value>
-  </data>
-  <data name="&gt;&gt;notFoundLabel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;notFoundLabel.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;notFoundLabel.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="notFoundListBox.HorizontalScrollbar" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="notFoundListBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 37</value>
-  </data>
-  <data name="notFoundListBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>321, 173</value>
-  </data>
-  <data name="notFoundListBox.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
-  </data>
-  <data name="&gt;&gt;notFoundListBox.Name" xml:space="preserve">
-    <value>notFoundListBox</value>
-  </data>
-  <data name="&gt;&gt;notFoundListBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ListBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;notFoundListBox.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;notFoundListBox.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>345, 246</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Missing files</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>FilesNotFoundDialog</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="languageToolStripMenuItem.Text" xml:space="preserve">
+    <value>Language</value>
   </data>
 </root>
